src-tauri/check_output.txt
    Checking plugable-chat v0.1.0 (/Users/bernie/git/plugable-chat/src-tauri)
error[E0614]: type `std::option::Option<f32>` cannot be dereferenced
   --> src-tauri/src/actors/vector_actor.rs:183:53
    |
183 |         vec![Some(vector_values.iter().map(|v| Some(*v)).collect::<Vec<_>>())],
    |                                                     ^^ can't be dereferenced

error[E0308]: mismatched types
   --> src-tauri/src/actors/vector_actor.rs:204:18
    |
204 |         .execute(RecordBatchIterator::new(vec![Ok(batch)], schema))
    |          ------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Box<dyn RecordBatchReader + Send>`, found `RecordBatchIterator<Vec<...>>`
    |          |
    |          arguments to this method are incorrect
    |
    = note: expected struct `Box<(dyn arrow_array::RecordBatchReader + std::marker::Send + 'static)>`
               found struct `RecordBatchIterator<Vec<Result<RecordBatch, ArrowError>>>`
    = note: for more on the distinction between the stack and the heap, read https://doc.rust-lang.org/book/ch15-01-box.html, https://doc.rust-lang.org/rust-by-example/std/box.html, and https://doc.rust-lang.org/std/boxed/index.html
note: method defined here
   --> /Users/bernie/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/lancedb-0.4.20/src/table/merge.rs:100:18
    |
100 |     pub async fn execute(self, new_data: Box<dyn RecordBatchReader + Send>) -> Result<()> {
    |                  ^^^^^^^
help: store this in the heap by calling `Box::new`
    |
204 |         .execute(Box::new(RecordBatchIterator::new(vec![Ok(batch)], schema)))
    |                  +++++++++                                                 +

error[E0599]: the method `filter` exists for struct `Query`, but its trait bounds were not satisfied
   --> src-tauri/src/actors/vector_actor.rs:209:31
    |
209 |     let query = table.query().filter(format!("id = '{}'", id)).limit(1);
    |                               ^^^^^^ private field, not a method
    |
   ::: /Users/bernie/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/lancedb-0.4.20/src/query.rs:471:1
    |
471 | pub struct Query {
    | ---------------- doesn't satisfy `Query: Iterator`, `Query: StreamExt` or `Query: Stream`
    |
    = note: the following trait bounds were not satisfied:
            `Query: Stream`
            which is required by `Query: StreamExt`
            `&Query: Stream`
            which is required by `&Query: StreamExt`
            `&mut Query: Stream`
            which is required by `&mut Query: StreamExt`
            `Query: Iterator`
            which is required by `&mut Query: Iterator`

error[E0599]: the method `filter` exists for struct `Query`, but its trait bounds were not satisfied
   --> src-tauri/src/actors/vector_actor.rs:221:31
    |
221 |     let query = table.query().filter(format!("id = '{}'", id)).limit(1);
    |                               ^^^^^^ private field, not a method
    |
   ::: /Users/bernie/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/lancedb-0.4.20/src/query.rs:471:1
    |
471 | pub struct Query {
    | ---------------- doesn't satisfy `Query: Iterator`, `Query: StreamExt` or `Query: Stream`
    |
    = note: the following trait bounds were not satisfied:
            `Query: Stream`
            which is required by `Query: StreamExt`
            `&Query: Stream`
            which is required by `&Query: StreamExt`
            `&mut Query: Stream`
            which is required by `&mut Query: StreamExt`
            `Query: Iterator`
            which is required by `&mut Query: Iterator`

warning: unused variable: `handles_clone`
   --> src-tauri/src/lib.rs:102:9
    |
102 |     let handles_clone = handles.inner().clone(); // We need to clone the handles for the spawned task?
    |         ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_handles_clone`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0308, E0599, E0614.
For more information about an error, try `rustc --explain E0308`.
warning: `plugable-chat` (lib) generated 1 warning
error: could not compile `plugable-chat` (lib) due to 4 previous errors; 1 warning emitted
